--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "Codequacks",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.6.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^5.0.0-beta2",
     "jquery": "^3.5.1",
     "jquery-bar-rating": "^1.2.2",
-    "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
     "typed.js": "^2.0.11"
   },
