--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.2.2",
+    "@rails/webpacker": "4.3.0",
     "bootstrap": "^5.0.0-beta2",
+    "flatpickr": "^4.6.9",
     "jquery": "^3.5.1",
     "jquery-bar-rating": "^1.2.2",
     "turbolinks": "^5.2.0",
@@ -17,6 +18,6 @@
   "devDependencies": {
     "node-forge": ">=0.10.0",
     "serialize-javascript": ">=3.1.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.2"
   }
 }
