--- a/config/storage.yml
+++ b/config/storage.yml
@@ -8,7 +8,8 @@ local:
 
 cloudinary:
   service: Cloudinary
-  folder: airducks
+  folder: <%= "codequacks/" + Rails.env %>
+  
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
