--- a/package.json
+++ b/package.json
@@ -2,22 +2,18 @@
   "name": "Codequacks",
   "private": true,
   "dependencies": {
+    "@hotwired/stimulus": "^3.2.1",
+    "@hotwired/turbo-rails": "^7.2.5",
     "@popperjs/core": "^2.6.0",
-    "@rails/actioncable": "^6.0.0",
-    "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.4.3",
-    "bootstrap": "^5.0.0-beta2",
+    "bootstrap": "^5.2.3",
     "flatpickr": "^4.6.9",
     "jquery": "^3.5.1",
     "jquery-bar-rating": "^1.2.2",
-    "turbolinks": "^5.2.0",
-    "typed.js": "^2.0.11"
+    "typed.js": "^2.0.11",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
-  "version": "0.1.0",
-  "devDependencies": {
-    "node-forge": ">=1.3.0",
-    "serialize-javascript": ">=3.1.0",
-    "webpack-dev-server": "^3.11.2"
+  "scripts": {
+    "build": "webpack --config webpack.config.js"
   }
 }
